--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [{
     "css": ["styles.css"],
     "js": ["papaparse.js","papaparse.min.js","content.js"],
-    "matches": ["https://app.uleadz.com/job/job/*"]
+    "matches": ["https://app.uleadz.com/*"]
   
   }]
 }
